lib_LTLIBRARIES = libcoreHezelnut.la

libcoreHezelnut_la_LIBADD = classes/libcoreHezelnut_classes.la

libcoreHezelnut_la_DEPENDENCIES = classes/libcoreHezelnut_classes.la

libcoreHezelnut_la_SOURCES = \
	allocation.c  \
	chn-selector.c  \
	classes.c  \
	error-handling.c  \
	objects.c  \
	utils.c

SUBDIRS = classes
