
SUBDIRS = classes

lib_LTLIBRARIES = libcoreHezelnut.la

libcoreHezelnut_la_LIBADD = classes/libcoreHezelnut_classes.la

libcoreHezelnut_la_DEPENDENCIES = classes/libcoreHezelnut_classes.la

libcoreHezelnut_la_SOURCES = \
	allocation.c  \
	chn_selector.c  \
	chn_class.c  \
	error_handling.c  \
	runtime.c   \
	utils.c
