SUBDIRS = classes

libcoreHezelnut_includedir = $(includedir)/coreHezelnut

libcoreHezelnut_include_HEADERS = \
	allocation.h  \
	callbacks.h  \
	chn-api.h  \
	chn-internal.h  \
	chn-list.h  \
	classes.h  \
	coreHezelnut.h  \
	error-handling.h  \
	messaging.h  \
	objects.h  \
	runtime.h  \
	target-conditionals.h
