SUBDIRS = classes

libcoreHezelnut_includedir = $(includedir)/coreHezelnut

libcoreHezelnut_include_HEADERS = \
	allocation.h  \
	callbacks.h  \
	chn_api.h  \
	chn_internal.h  \
	chn_list.h  \
	classes.h  \
	coreHezelnut.h  \
	error_handling.h  \
	messaging.h  \
	runtime.h  \
	target_conditionals.h
