SUBDIRS = classes

libcoreHezelnut_includedir = $(includedir)/coreHezelnut

libcoreHezelnut_include_HEADERS = \
	allocation.h  \
	callbacks.h  \
	chn_api.h  \
	chn_class.h  \
	chn_internal.h  \
	chn_list.h  \
	coreHezelnut.h  \
	error_handling.h  \
	hashing.h  \
	messaging.h  \
	runtime.h  \
	selector.h  \
	target_conditionals.h  \
	threading.h
