lib_LTLIBRARIES = libcoreHezelnut_classes.la

libcoreHezelnut_classes_la_SOURCES = \
	CHNArray.c                       \
	CHNBag.c                         \
	CHNBihavior.c                    \
	CHNBlockClosure.c                \
	CHNBlockContext.c                \
	CHNCollection.c                  \
	CHNCompiledBlock.c               \
	CHNContextPart.c                 \
	CHNFileDescriptor.c              \
	CHNMappedCollection.c            \
	CHNObject.c                      \
	CHNStream.c                      \
	CHNTranscript.c
