libcoreHezelnut_includedir = $(includedir)/coreHezelnut/classes

libcoreHezelnut_include_HEADERS = \
	CHNArgumentOutOfRangeError.h \
	CHNArray.h \
	CHNArrayedCollection.h \
	CHNBihavior.h \
	CHNBlockClosure.h \
	CHNBlockContext.h \
	CHNByteArray.h \
	CHNCharacter.h \
	CHNClass.h \
	CHNCollection.h \
	CHNCompiledBlock.h \
	CHNCompiledMethod.h \
	CHNContextPart.h \
	CHNError.h \
	CHNFloat.h \
	CHNIODescriptor.h \
	CHNIndexOutOfRangeError.h \
	CHNIteratable.h \
	CHNIterator.h \
	CHNMessage.h \
	CHNNotEnoughElementsError.h \
	CHNNotFoundError.h \
	CHNNotIndexableError.h \
	CHNObject.h \
	CHNOrderedCollection.h \
	CHNReadOnlyObjectError.h \
	CHNSequenceableCollection.h \
	CHNSet.h \
	CHNSmallInteger.h \
	CHNStream.h \
	CHNString.h \
	CHNSymbol.h \
	CHNTranscript.h \
	CHNWriteStream.h \
	CHNWrongArgumentCountError.h \
	CHNWrongClassError.h
