libcoreHezelnut_includedir = $(includedir)/coreHezelnut/classes

libcoreHezelnut_include_HEADERS = \
	CHNArray.h  \
	CHNArrayedCollection.h  \
	CHNBag.h  \
	CHNBihavior.h  \
	CHNBlockClosure.h  \
	CHNBlockContext.h  \
	CHNByteArray.h  \
	CHNCharacter.h  \
	CHNClass.h  \
	CHNCollection.h  \
	CHNCompiledBlock.h  \
	CHNCompiledMethod.h  \
	CHNContextPart.h  \
	CHNDictionary.h  \
	CHNError.h  \
	CHNFileDescriptor.h  \
	CHNFileStream.h  \
	CHNFloat.h  \
	CHNIODescriptor.h  \
	CHNIndexOutOfRangeError.h  \
	CHNInteger.h  \
	CHNIteratable.h  \
	CHNIterator.h  \
	CHNKeyAndValueIterator.h  \
	CHNLookupTable.h  \
	CHNMappedCollection.h  \
	CHNMessage.h  \
	CHNNotEnoughElementsError.h  \
	CHNNotFoundError.h  \
	CHNNotIndexableError.h  \
	CHNObject.h  \
	CHNOrderedCollection.h  \
	CHNReadOnlyObjectError.h  \
	CHNSequenceableCollection.h  \
	CHNSet.h  \
	CHNSmallInteger.h  \
	CHNSortedCollection.h  \
	CHNStream.h  \
	CHNString.h  \
	CHNSymbol.h  \
	CHNTranscript.h  \
	CHNWeakIdentitySet.h  \
	CHNWriteStream.h  \
	CHNWrongArgumentCountError.h  \
	CHNWrongClassError.h
